@@ -1,11 +1,12 @@
 tenace (0.12) upstream; urgency=low
 
   * Build system updates; fix building with --as-needed.
-  * Add /usr/share/gnome-games-common/cards/gnomangelo_bitmap.svg to list of
+  * Add /usr/share/aisleriot/cards/{bonded,paris}.svg and
+    /usr/share/gnome-games-common/cards/gnomangelo_bitmap.svg to list of
     default svg files.
   * Initialize win->svg correctly.
 
- -- Christoph Berg <myon@debian.org>  Wed, 06 Jul 2011 16:41:11 +0200
+ -- Christoph Berg <myon@debian.org>  Tue, 03 Apr 2012 22:34:27 +0200
 
 tenace (0.11) upstream; urgency=low
 
